# titanirc

./: .gitignore  Cargo.toml  README.md  config.toml  flake.nix  rustfmt.toml
.cargo/: audit.toml
migrations/: 2023010814480_initial-schema.sql  20240131220401_add_server_bans_table.sql
src/: channel.rs  client.rs  config.rs  connection.rs  host_mask.rs  keys.rs  lib.rs  main.rs  messages.rs  persistence.rs  proto.rs  server.rs
src/channel/: permissions.rs  response.rs
src/connection/: authenticate.rs  sasl.rs
src/database/: mod.rs
src/persistence/: events.rs
src/server/: response.rs
text/: info.txt
titanirc-codec/: Cargo.toml
titanirc-codec/src/: lib.rs  wire.rs
titanirc-server/: Cargo.toml
titanirc-server/migrations/: 001_initial.sql
titanirc-server/src/: config.rs  error.rs  main.rs  server.rs  session.rs
titanirc-server/src/entities/: channel.rs  mod.rs  user.rs
titanirc-server/src/entities/channel/: events.rs  mod.rs
titanirc-server/src/entities/user/: commands.rs  events.rs  mod.rs
titanirc-server/src/models/: mod.rs  user.rs
titanirc-types/: Cargo.toml
titanirc-types/src/: lib.rs  primitives.rs  replies.rs
titanirc-types/src/protocol/: commands.rs  mod.rs  primitives.rs  replies.rs
