[package]
name = "titanirc-server"
version = "0.1.0"
authors = ["Jordan Doyle <jordan@doyle.la>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
titanirc-codec = { path = "../titanirc-codec" }
titanirc-types = { path = "../titanirc-types" }

actix = { git = "https://github.com/JordanForks/actix" }
actix-rt = "=2.0.0-beta.2"
tokio = { version = "1.1", features = ["net", "signal"] }
tokio-util = "0.6"
async-stream = "0.3"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
displaydoc = "0.1"
clap = "3.0.0-beta.2"
futures-util = "0.3"
bytes = "1.0"
uuid = { version = "0.8", features = ["v4"] }
derive_more = "0.99"
arc-swap = "1.2"
sqlx = { version = "0.4", features = [ "runtime-tokio-rustls", "any", "macros", "migrate" ] }
